--- a/templates/chart.html
+++ b/templates/chart.html
@@ -8,7 +8,7 @@
        background-color: #FFECEC;
      }
      .container {
-       margin-top: 2.0rem;
+       margin-top: 1.0rem;
        overflow-x: auto;
        white-space: nowrap;
      }
@@ -57,7 +57,7 @@
        color: {{bold_color or "black"}};
      }
      u {
-       text-decoration: solid underline grey 2px;
+       text-decoration: solid underline grey 1px;
      }
     </style>
   </head>
@@ -198,7 +198,7 @@
               <th class="vert_sect" colspan="{{rnds}}">Points Against (by Round)</th>
               <th class="hor_sect vert_sect" rowspan="2">Win Pct</th>
               <th class="hor_sect" rowspan=2>Pts Diff</th>
-              <th class="hor_sect" rowspan=2>Div Rank</th>
+              <th class="hor_sect" rowspan=2>Rank</th>
             </tr>
             <tr>
               <th class="hor_sect vert_sect score">1</th>
