--- a/templates/dash.html
+++ b/templates/dash.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -109,7 +108,7 @@
               <th class="vert_sect" colspan="{{rnds}}">Points For (by Round)</th>
               <th class="vert_sect" colspan="{{rnds}}">Points Against (by Round)</th>
               <th class="hor_sect vert_sect" rowspan="2">Win Pct</th>
-              <th class="hor_sect" rowspan=2>Pts Diff</th>
+              <th class="hor_sect" rowspan=2>Pts Pct</th>
               <th class="hor_sect" rowspan=2>Rank</th>
               <th class="hor_sect" rowspan=2>Mvmt</th>
             </tr>
@@ -162,7 +161,7 @@
               <th class="vert_sect" colspan="{{rnds}}">Points For (by Round)</th>
               <th class="vert_sect" colspan="{{rnds}}">Points Against (by Round)</th>
               <th class="hor_sect vert_sect" rowspan="2">Win Pct</th>
-              <th class="hor_sect" rowspan=2>Pts Diff</th>
+              <th class="hor_sect" rowspan=2>Pts Pct</th>
               <th class="hor_sect" rowspan=2>Rank</th>
               <th class="hor_sect" rowspan=2>Mvmt</th>
             </tr>
