player_seed -> player_rank (part of naming cleanup--next up: delineate seed and seeding consistently)

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -140,7 +140,7 @@
               {% endfor %}
               <td class="vert_sect">{{fmt_stat(pl.seed_win_pct)|safe}}</td>
               <td>{{fmt_stat(pl.seed_pts_pct)|safe}}</td>
-              <td>{{fmt_stat(pl.player_seed)|safe}}</td>
+              <td>{{fmt_stat(pl.player_rank)|safe}}</td>
             </tr>
             {% endfor %}
           </tbody>
