--- a/templates/euchmgr.html
+++ b/templates/euchmgr.html
@@ -684,7 +684,7 @@
            {% endif %}
            {% endfor %}
          ],
-         order: [[1, 'asc']],  // player_seed
+         order: [[1, 'asc']],  // player_rank
          initComplete: function(settings, json) {
            table.columns.adjust().draw();
          }
